--- a/src/components/WeatherLocation/WeatherData/styles.css
+++ b/src/components/WeatherLocation/WeatherData/styles.css
@@ -3,13 +3,14 @@
     width: 400px;
     height: 100px;
     line-height: 100px;
-    border-radius: 5px;
+    border-radius: 5px;   
 }
 .weatherExtraInfoCont {
     width: 40%;
     display: inline-block;
     line-height: 28px;
     text-align: left;
+    vertical-align: middle;  
 }
 .weatherTemperatureCont {    
     width: 60%;
@@ -34,4 +35,5 @@
 }
 .wicon {
     color: rgb(255,72,0);
+    vertical-align: middle;
 }
