--- a/src/components/WeatherLocation/styles.css
+++ b/src/components/WeatherLocation/styles.css
@@ -3,14 +3,19 @@
     height: 35px;
     text-align: left;   
     color: #888;
-    line-height: 35px;  
+    line-height: 35px;
+    overflow: hidden;
 }
 .locationCont h1 {
-    margin: 0
-
+    margin: 0;
+    white-space: nowrap;
 }
 .weatherLocationCont {
-    width: 400px;
+    width: calc(100% - 20px);
+    margin-left: 10px;
+    margin-right: 10px;
+    min-width: 350px;
+    box-sizing: border-box;
     padding: 15px;
     font-family: 'Manjari',sans-serif;
     box-shadow: 10px 10px 40px -12px rgba(146, 99, 99, 0.75);
