finish reacts components and coming redux aplication

--- a/src/components/WeatherLocation/styles.css
+++ b/src/components/WeatherLocation/styles.css
@@ -19,5 +19,5 @@
     padding: 15px;
     font-family: 'Manjari',sans-serif;
     box-shadow: 10px 10px 40px -12px rgba(146, 99, 99, 0.75);
+    cursor: pointer;
 }
-/*Manjari*/
