--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,6 +1,11 @@
+.locationList {
+    height: 85vh;
+    overflow: auto;
+}
+
 @media (max-width: 64em) {
     .locationList {
-        max-height: 30vh;
+        max-height: 45vh;
         overflow: auto;
         margin-bottom: 20px;
     }
